# trade_bot_ai

./: .env.sample  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
prompts/: system.md
src/bot/: chat.py  config.py  decisions.py  exchange.py  features.py  formatting.py  main.py  metrics.py  risk.py  scheduler.py  state.py
tests/: test_decisions.py  test_formatting.py
