[project]
name = "bybit-gpt-bot"
version = "0.1.0"
description = "Bybit USDT perpetual trading bot powered by GPT decisions"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{ name = "Your Name" }]

dependencies = [
  "ccxt>=4.3.0",
  "openai>=1.40.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.4",
  "typer>=0.12.3",
  "PyYAML>=6.0.1",
  "tenacity>=8.2.3",
  "python-dotenv>=1.0.1",
  "rich>=13.7.1",
  "uvloop>=0.19.0; platform_system != 'Windows'",
  "prometheus_client>=0.20.0",
  "shortuuid>=1.0.13"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

